# daemon

./: CMakeLists.txt  FaceDetector.cpp  FaceDetector.h  README.md  face_detect.cpp  main.cpp  main.py
